[tool.poetry]
name = "wait-for-service"
version = "1.1.4"
description = ""
authors = ["Ryan Faircloth <ryan@dss-i.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[tool.poetry.group.kafka.dependencies]
kafka-python = "^2.0.2"


[tool.poetry.group.memcached.dependencies]
python3-memcached = "^1.51"

[tool.poetry.group.mongodb.dependencies]
pymongo = "^4.5.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"

[tool.poetry.scripts]
wait-for-service = "wait_for_service.wait_for_service:main"


[tool.poetry.group.mysql.dependencies]
mysql-connector-python = "^8.1.0"


[tool.poetry.group.postgres.dependencies]
psycopg2-binary = "^2.9.9"


[tool.poetry.group.psycopg.dependencies]
psycopg = {version = "^3.1.12", extras = ["binary"]}


[tool.poetry.group.rabbitmq.dependencies]
pika = "^1.3.2"


[tool.poetry.group.redis.dependencies]
redis = "^5.0.1"


[tool.poetry.group.websockets.dependencies]
websocket-server = "^0.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
