[tool.poetry]
name = "wait-for-service"
version = "1.1.5"
description = ""
authors = ["Ryan Faircloth <ryan@dss-i.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
kafka-python = { version = "^2.0.2" , optional = true }
python3-memcached = { version = "^1.51", optional = true }
pymongo = { version ="^4.5.0", optional = true }
mysql-connector-python = { version ="^8.1.0", optional = true }
psycopg2-binary ={ version = "^2.9.9", optional = true }
psycopg = {version = "^3.1.12", extras = ["binary"], optional = true}
pika = { version ="^1.3.2", optional = true }
redis = { version ="^5.0.1", optional = true }
websocket-server ={ version = "^0.6.4", optional = true }

[tool.poetry.extras]
kafka = ["kafka-python"]
memcached = ["python3-memcached"]
mongodb = ["pymongo"]
mysql = ["mysql-connector-python"]
postgres = ["psycopg2-binary"]
psycopg = ["psycopg"]
rabbitmq = ["pika"]
redis = ["redis"]
websockets = ["websocket-server"]

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.9.1"
flake8 = "^6.1.0"


[tool.poetry.scripts]
wait-for-service = "wait_for_service.wait_for_service:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py311']

[tool.isort]
profile = "black"
multi_line_output = 3
